--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -47,13 +47,13 @@
         <section class="section info-box">
             <div class="container">
                 <div class="row">
-                     <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-4 col-md-4">
                         <div class="info-box__item">
                             <img src="img/happyman.png" alt="">
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-8">
-                        <div class="info-box__item" >
+                        <div class="info-box__item">
                             <h3>Your first step to a brighter future</h3>
                             <p>
                                 The Property Buying Company Ltd understands that we are in difficult and challenging economic times and we strive to be a
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </section>
-        <section class="section info-box" style="background-color:#3F51B5">
+        <section class="section info-box" style="background:#3F51B5">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-8">
@@ -84,13 +84,16 @@
                             <p>
                                 <ul style="text-align:left;color:#fff">
                                     <li>
-                                         Sell cheap, buy cheaper Looking to sell your property fast to buy another property? The Property Buying Company buys your current property allowing you to buy your discounted property.
+                                        Sell cheap, buy cheaper Looking to sell your property fast to buy another property? The Property Buying Company buys your
+                                        current property allowing you to buy your discounted property.
                                     </li>
                                     <li>
-                                        Sell buy to let property Buy to let property you need to sell quickly? Sell it to us to clear the mortgage and release the capital.
+                                        Sell buy to let property Buy to let property you need to sell quickly? Sell it to us to clear the mortgage and release the
+                                        capital.
                                     </li>
                                     <li>
-                                        Property part exchange buying a new property and struggling to meet builders' timescales or worried about losing out to someone in a better position?
+                                        Property part exchange buying a new property and struggling to meet builders' timescales or worried about losing out to someone
+                                        in a better position?
                                     </li>
                                     <li>
                                         Private house sale If you're looking for a private property sale, then The Property Buying Company can help.
@@ -108,72 +111,35 @@
                 </div>
             </div>
         </section>
-           <section class="section info-box">
+        <section class="section info-box">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-trending-up info-box__icon"></i> -->
-                            <img src="img/icons/house.png" alt="">
+                            <img src="img/OIHEI80.jpg" alt="" width="300" height="300">
 
-                            <h3>Sed posuere consectetur</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                            <h3>No fees whatsoever</h3>
+                            <p>The Property Buying Company understands that selling your property can be costly. We will make
+                                sure that all the costs are covered by ourselves.</p>
                         </div>
                     </div>
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-search info-box__icon"></i> -->
-                            <img src="img/icons/building.png" alt="">
+                            <img src="img/O9IY330.jpg" alt="" width="300" height="300">
 
-                            <h3>Donec ullamcorper nulla</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                            <h3>Completion date to suit you</h3>
+                            <p>The Property Buying Company will work with you to achieve your desired completion date. Tell
+                                us the timescales and we will work towards that all important date.</p>
                         </div>
                     </div>
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-globe info-box__icon"></i> -->
-                            <img src="img/icons/house (1).png" alt="">
-
-                            <h3>Integer posuere erat</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-flower info-box__icon"></i> -->
-                            <img src="img/icons/house (2).png" alt="">
-
-                            <h3>Nulla vitae elit</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-pin info-box__icon"></i> -->
-                            <img src="img/icons/laptop.png" alt="">
-
-                            <h3>Libero pharetra augue</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <div class="info-box__item">
-                            <!-- <i class="zmdi zmdi-sun info-box__icon"></i> -->
-                            <img src="img/icons/money-bag.png" alt="">
-
-                            <h3>Aenean lacinia bibendum</h3>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                            <img src="img/OAI50P0.jpg" alt="" width="300" height="300">
+                            <h3>Best trade prices paid</h3>
+                            <p>The Property Buying Company have various buying solutions allowing us an unprecedented level
+                                of flexibility to achieve a better price for your property.</p>
                         </div>
                     </div>
                 </div>
