--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -101,31 +101,31 @@
                                     <label>Property Type</label>
 
                                     <select class="select2" value.bind="model.property.type">
-                                            <option value="">Studio</option>
-                                            <option value="">Apartment</option>
-                                            <option value="">Townhouse</option>
-                                            <option value="">Villa</option>
+                                            <option value="studio">Studio</option>
+                                            <option value="apartment">Apartment</option>
+                                            <option value="townhouse">Townhouse</option>
+                                            <option value="villa">Villa</option>
                                         </select>
                                 </div>
 
                                 <div class="form-group form-group--float form-group--float-center">Property title
-                                    <input type="text" class="form-control text-center" value.bind="model.property.title">
+                                    <input type="text" class="form-control text-center" value.bind="model.information.title">
                                     <i class="form-group__bar"></i>
                                 </div>
 
                                 <div class="form-group form-group--float form-group--float-center">Description
-                                    <textarea class="form-control text-center textarea-autoheight" value.bind="model.property.description"></textarea>
+                                    <textarea class="form-control text-center textarea-autoheight" value.bind="model.information.description"></textarea>
                                     <i class="form-group__bar"></i>
                                 </div>
 
 
                                 <div class="form-group form-group--float form-group--float-center">Square Feet
-                                    <input type="text" class="form-control text-center" value.bind="model.property.squareFeet">
+                                    <input type="text" class="form-control text-center" value.bind="model.information.squareFeet">
                                     <i class="form-group__bar"></i>
                                 </div>
 
                                 <div class="form-group form-group--float form-group--float-center">Year Built
-                                    <input type="numeric" class="form-control text-center" value.bind="model.property.year">
+                                    <input type="numeric" class="form-control text-center" value.bind="model.information.year">
                                     <i class="form-group__bar"></i>
                                 </div>
 
@@ -210,7 +210,7 @@
                                     </div>
                                 </div>
 
-                                <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="validateStep(3)">
+                                <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="finalValidationAnSubmit()">
                                         <i class="zmdi zmdi-check"></i>
                                     </a>
                             </form>
