--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -12,7 +12,7 @@
                     <li class="active"><a href="#submit-property-1" data-toggle="tab">1</a></li>
                     <li><a href="#submit-property-2" data-toggle="tab">2</a></li>
                     <li><a href="#submit-property-3" data-toggle="tab">3</a></li>
-                    <li><a href="#submit-property-4" data-toggle="tab">4</a></li>
+                    <li><a id="submitted" href="#submit-property-4">4</a></li>
 
                     <li class="submit-property__caret"></li>
                 </ul>
