--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -223,10 +223,10 @@
                                 <i class="zmdi zmdi-check"></i>
 
                                 <h2>Successful!</h2>
-                                <p>Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida
-                                    at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-                                    ut fermentum massa justo sit amet risus. Donec sed odio dui. Cras justo odio, dapibus
-                                    ac facilisis in, egestas eget quam.</p>
+                                <p>Your proposal has been submitted and we will get back to you as soon as possible.</p>
+                                    <div class="info-box__item">
+                                    <img src="img/ON40SC1.png" alt="" width="300" height="300">
+                                </div>
                             </div>
                         </div>
                     </div>
