--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -116,7 +116,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img src="img/OIHEI80.jpg" alt="" width="300" height="300">
+                            <img src="img/OIHEI81.png" alt="" width="300" height="300">
 
                             <h3>No fees whatsoever</h3>
                             <p>The Property Buying Company understands that selling your property can be costly. We will make
@@ -126,7 +126,7 @@
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img src="img/O9IY330.jpg" alt="" width="300" height="300">
+                            <img src="img/O9IY331.png" alt="" width="300" height="300">
 
                             <h3>Completion date to suit you</h3>
                             <p>The Property Buying Company will work with you to achieve your desired completion date. Tell
@@ -136,7 +136,7 @@
 
                     <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img src="img/OAI50P0.jpg" alt="" width="300" height="300">
+                            <img src="img/OAI50P1.png" alt="" width="300" height="300">
                             <h3>Best trade prices paid</h3>
                             <p>The Property Buying Company have various buying solutions allowing us an unprecedented level
                                 of flexibility to achieve a better price for your property.</p>
