--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </div>
   <!-- End page loader -->
 
-  <script type="text/javascript">App = {}</script>
+  <script type="text/javascript">AppState = {}</script>
   <script type="text/javascript" src="js/config.js"></script>
   <!-- Start main application -->
   <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
