--- a/public/index.html
+++ b/public/index.html
@@ -2,49 +2,51 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Realty - Make a sale now!</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Realty - Make a sale now!</title>
 
-  <!-- Vendors -->
+    <!-- Vendors -->
 
-  <!-- Material design colors -->
-  <link href="vendors/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
+    <!-- Material design colors -->
+     <link href="vendors/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet"> 
 
-  <!-- CSS animations -->
-  <link rel="stylesheet" href="vendors/animate.css/animate.min.css">
+    <!-- CSS animations -->
+    <link rel="stylesheet" href="vendors/animate.css/animate.min.css">
 
-  <!-- Select2 - Custom Selects -->
-  <link rel="stylesheet" href="vendors/select2/dist/css/select2.min.css">
+    <!-- Select2 - Custom Selects -->
+    <link rel="stylesheet" href="vendors/select2/dist/css/select2.min.css">
 
-  <!-- NoUiSlider - Input Slider -->
-  <link rel="stylesheet" href="vendors/nouislider/distribute/nouislider.min.css">
+    <!-- NoUiSlider - Input Slider -->
+    <link rel="stylesheet" href="vendors/nouislider/distribute/nouislider.min.css">
 
-  <!-- Site -->
-  <link rel="stylesheet" href="css/app_1.css">
-  <link rel="stylesheet" href="css/app_2.css">
+    <!-- Site -->
+     <link rel="stylesheet" href="css/app_1.css"> 
+     <link rel="stylesheet" href="css/app_2.css"> 
 
-  <!-- Page Loader JS -->
-  <script src="js/page-loader.js" async></script>
+    <!-- Page Loader JS -->
+    <script src="js/page-loader.js" async></script>
 </head>
 
 <body aurelia-app="main">
-  <!-- Start page loader -->
-  <div id="page-loader">
-    <div class="page-loader__spinner"></div>
-  </div>
-  <!-- End page loader -->
+    <!-- Start page loader -->
+    <div id="page-loader">
+        <div class="page-loader__spinner"></div>
+    </div>
+    <!-- End page loader -->
 
-  <script type="text/javascript">AppState = {}</script>
-  <script type="text/javascript" src="js/config.js"></script>
-  <!-- Start main application -->
-  <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
-  <!-- End main application -->
+    <script type="text/javascript">
+        AppState = {}
+    </script>
+    <script type="text/javascript" src="js/config.js"></script>
+    <!-- Start main application -->
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    <!-- End main application -->
 
 
-  <!-- Older IE warning message -->
-  <!--[if lt IE 9]>
+    <!-- Older IE warning message -->
+    <!--[if lt IE 9]>
         <div class="ie-warning">
             <h1>Warning!!</h1>
             <p>You are using an outdated version of Internet Explorer, please upgrade <br/>to any of the following web browsers to access this website.</p>
@@ -87,40 +89,36 @@
         <![endif]-->
 
 
-  <!-- Javascript -->
+    <!-- Javascript -->
 
-  <!-- jQuery -->
-  <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <!-- jQuery -->
+    <script src="vendors/jquery/dist/jquery.min.js"></script>
 
-  <!-- Bootstrap -->
-  <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
-  <script src="vendors/parallax-background-master/js/parallax-background.js"></script>
+    <script src="vendors/parallax-background-master/js/parallax-background.js"></script>
 
-  <!-- Waves button ripple effects -->
-   <script src="vendors/Waves/dist/waves.min.js"></script> 
+    <!-- Waves button ripple effects -->
+    <script src="vendors/Waves/dist/waves.min.js"></script>
 
-  <!-- Select 2 - Custom Selects -->
-  <!-- <script src="vendors/select2/dist/js/select2.full.min.js"></script> -->
+    <!-- Select 2 - Custom Selects -->
+    <!-- <script src="vendors/select2/dist/js/select2.full.min.js"></script> -->
 
-  <!-- NoUiSlider -->
-   <!-- <script src="vendors/nouislider/distribute/nouislider.min.js"></script>  -->
+    <!-- NoUiSlider -->
+    <!-- <script src="vendors/nouislider/distribute/nouislider.min.js"></script>  -->
 
-  <!-- IE9 Placeholder -->
-  <!--[if IE 9 ]>
+    <!-- IE9 Placeholder -->
+    <!--[if IE 9 ]>
         <script src="vendors/bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
         <![endif]-->
 
-  <!-- Site functions and actions -->
-    <script src="js/app.min.js"></script>  
+    <!-- Site functions and actions -->
+    <script src="js/app.min.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC02bIRNy0Y8x9klbesAlmkqqUfkcgD49A"></script>
 
-   <!-- Demo only -->
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC02bIRNy0Y8x9klbesAlmkqqUfkcgD49A"></script>
-        <!-- <script src="js/demo/demo.js"></script> -->
-        <!-- <script src="js/demo/maps/listing-detail-location-map.js"></script> -->
 
-    
 </body>
 
 </html>
