--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -225,7 +225,7 @@
                                 <h2>Successful!</h2>
                                 <p>Your proposal has been submitted and we will get back to you as soon as possible.</p>
                                     <div class="info-box__item">
-                                    <img src="img/ON40SC1.png" alt="" width="300" height="300">
+                                    <img  class="img-responsive" src="img/ON40SC1.png" alt="" width="300" height="300" style="display: inline">
                                 </div>
                             </div>
                         </div>
