--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <!-- Vendors -->
 
     <!-- Material design colors -->
-     <link href="vendors/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet"> 
+    <link href="vendors/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
+
+
+    <link href="js/parallax/examples/assets/styles.css" rel="stylesheet">
 
     <!-- CSS animations -->
     <link rel="stylesheet" href="vendors/animate.css/animate.min.css">
@@ -22,8 +25,8 @@
     <link rel="stylesheet" href="vendors/nouislider/distribute/nouislider.min.css">
 
     <!-- Site -->
-     <link rel="stylesheet" href="css/app_1.css"> 
-     <link rel="stylesheet" href="css/app_2.css"> 
+    <link rel="stylesheet" href="css/app_1.css">
+    <link rel="stylesheet" href="css/app_2.css">
 
     <!-- Page Loader JS -->
     <script src="js/page-loader.js" async></script>
@@ -40,6 +43,7 @@
         AppState = {}
     </script>
     <script type="text/javascript" src="js/config.js"></script>
+     <script src="js/parallax/dist/parallax.min.js"></script> 
     <!-- Start main application -->
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
     <!-- End main application -->
