--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -231,7 +231,7 @@
                     </p>
                 </div>
                 <div class="col-sm-4">
-                    <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
+                    <img class="img-responsive" src="img/month12.png" alt="" width="200" height="200">
                 </div>
             </div>
             <span class="cd-date">Month 12</span>
@@ -248,6 +248,9 @@
 
         <div class="cd-timeline-content">
             <div row="row">
+                 <div class="col-sm-4">
+                    <img class="img-responsive" src="img/moneylost.png" alt="" width="200" height="200">
+                </div>
                 <div class="col-sm-7">
                     <h2>Net total $ 66,575</h2>
                     <p style="font-size: 1.5em;">
@@ -261,9 +264,6 @@
                             <li><b>$ 75</b> EPC</li>
                         </ul>
                     </p>
-                </div>
-                <div class="col-sm-4">
-                    <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
                 </div>
             </div>
             <span class="cd-date">Month 12</span>
