adding pictures to the workflow

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,6 @@
     <!-- Material design colors -->
     <link href="vendors/material-design-iconic-font/dist/css/material-design-iconic-font.min.css" rel="stylesheet">
 
-
-    <link href="js/parallax/examples/assets/styles.css" rel="stylesheet">
-
     <!-- CSS animations -->
     <link rel="stylesheet" href="vendors/animate.css/animate.min.css">
 
@@ -43,7 +40,7 @@
         AppState = {}
     </script>
     <script type="text/javascript" src="js/config.js"></script>
-     <script src="js/parallax/dist/parallax.min.js"></script> 
+     <script src="js/parallax/parallax.min.js"></script> 
     <!-- Start main application -->
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
     <!-- End main application -->
