--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -135,7 +135,7 @@
                             </p>
                         </div>
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
+                            <img class="img-responsive" src="img/houseInspect.png" alt="" width="200" height="200">
                         </div>
                     </div>
                     <span class="cd-date">Month 1</span>
@@ -159,7 +159,7 @@
                             </p>
                         </div>
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
+                            <img class="img-responsive" src="img/month3.png" alt="" width="200" height="200">
                         </div>
                     </div>
                     <span class="cd-date">Month 3</span>
@@ -183,7 +183,7 @@
                             </p>
                         </div>
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
+                            <img class="img-responsive" src="img/month6.png" alt="" width="200" height="200">
                         </div>
                     </div>
                     <span class="cd-date">Month 6</span>
@@ -207,7 +207,7 @@
                             </p>
                         </div>
                         <div class="col-sm-4">
-                            <img class="img-responsive" src="img/OAI50P1.png" alt="" width="200" height="200">
+                            <img class="img-responsive" src="img/fallsThrough.png" alt="" width="200" height="200">
                         </div>
                     </div>
                     <span class="cd-date">Month 9</span>
