--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -120,10 +120,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="section" style="text-align: center;">
+            <div class="container">
+                <h3>How The Property Buying Company can help you</h3>
+                <p>This is the journey of a normal house sale in today’s market. The Property Buying Company can reduce the
+                    time of a sale and may actually save them money rather than having to wait 8 – 12 months to sell their
+                    property on the open market and having to pay their own fees.</p>
+            </div>
+        </section>
         <section id="cd-timeline" class="cd-container">
             <div class="cd-timeline-block">
                 <div class="cd-timeline-img cd-picture">
-                  <img src="img/clock.png">
+                    <img src="img/clock.png">
                 </div>
                 <!-- cd-timeline-img -->
                 <div class="cd-timeline-content">
@@ -211,67 +220,74 @@
                         </div>
                     </div>
                     <span class="cd-date">Month 9</span>
+                </div>
+                <!-- cd-timeline-content -->
             </div>
-            <!-- cd-timeline-content -->
-    </div>
-    <!-- cd-timeline-block -->
+            <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-location">
-            <img src="img/clock.png">
-        </div>
-        <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-location">
+                    <img src="img/clock.png">
+                </div>
+                <!-- cd-timeline-img -->
 
-        <div class="cd-timeline-content">
-            <div row="row">
-                <div class="col-sm-7">
-                    <h2>Sold for $ 80,000</h2>
-                    <p style="font-size: 1.5em;">
-                        He sell their house for $ 80,000 and it completes 3 months later
-                    </p>
+                <div class="cd-timeline-content">
+                    <div row="row">
+                        <div class="col-sm-7">
+                            <h2>Sold for $ 80,000</h2>
+                            <p style="font-size: 1.5em;">
+                                He sell their house for $ 80,000 and it completes 3 months later
+                            </p>
+                        </div>
+                        <div class="col-sm-4">
+                            <img class="img-responsive" src="img/month12.png" alt="" width="200" height="200">
+                        </div>
+                    </div>
+                    <span class="cd-date">Month 12</span>
                 </div>
-                <div class="col-sm-4">
-                    <img class="img-responsive" src="img/month12.png" alt="" width="200" height="200">
-                </div>
+                <!-- cd-timeline-content -->
             </div>
-            <span class="cd-date">Month 12</span>
-        </div>
-        <!-- cd-timeline-content -->
-    </div>
-    <!-- cd-timeline-block -->
+            <!-- cd-timeline-block -->
 
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-movie">
-            <img src="img/clock.png">
-        </div>
-        <!-- cd-timeline-img -->
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-movie">
+                    <img src="img/clock.png">
+                </div>
+                <!-- cd-timeline-img -->
 
-        <div class="cd-timeline-content">
-            <div row="row">
-                 <div class="col-sm-4">
-                    <img class="img-responsive" src="img/moneylost.png" alt="" width="200" height="200">
+                <div class="cd-timeline-content">
+                    <div row="row">
+                        <div class="col-sm-4">
+                            <img class="img-responsive" src="img/moneylost.png" alt="" width="200" height="200">
+                        </div>
+                        <div class="col-sm-7">
+                            <h2>Net total $ 66,575</h2>
+                            <p style="font-size: 1.5em;">
+                                He did not actually net the full amount of a sale. He is mistaken if he thinks that sale amount is what he got. He has forgotten
+                                that the following fees apply :
+                                <ul>
+                                    <li><b>$ 8400</b> mortage</li>
+                                    <li><b>$ 1200</b> council tax.</li>
+                                    <li><b>$ 1500</b> utility bills</li>
+                                    <li><b>$ 1500</b> Charges</li>
+                                    <li><b>$ 750</b> Agent Fees</li>
+                                    <li><b>$ 75</b> EPC</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                    <span class="cd-date">Month 12</span>
                 </div>
-                <div class="col-sm-7">
-                    <h2>Net total $ 66,575</h2>
-                    <p style="font-size: 1.5em;">
-                        He did not actually net the full amount of a sale. He is mistaken if he thinks that sale amount is what he got. He has forgotten that the following fees apply :
-                        <ul>
-                            <li><b>$ 8400</b> mortage</li>
-                            <li><b>$ 1200</b> council tax.</li>
-                            <li><b>$ 1500</b> utility bills</li>
-                            <li><b>$ 1500</b> Charges</li>
-                            <li><b>$ 750</b> Agent Fees</li>
-                            <li><b>$ 75</b> EPC</li>
-                        </ul>
-                    </p>
-                </div>
+                <!-- cd-timeline-content -->
             </div>
-            <span class="cd-date">Month 12</span>
-        </div>
-        <!-- cd-timeline-content -->
-    </div>
-    <!-- cd-timeline-block -->
-    </section>
-    <!-- cd-timeline -->
-    <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px;" route-href="route: submit">SELL NOW</a>
+            <!-- cd-timeline-block -->
+        </section>
+        <!-- cd-timeline -->
+        <section class="section" style="text-align: center;">
+            <div class="container">
+                <h3>The Property Buying Company could have completed in 2-3 weeks and paid up $ 80,000</h3>
+                <h3>A massive potential saving of $13,425</h3>
+            </div>
+        </section>
+        <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px;" route-href="route: submit">SELL NOW</a>
 </template>
